--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.0",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
     "@reduxjs/toolkit": "^2.8.2",
+    "react-native-iconify": "^1.0.1",
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-reanimated": "^3.18.0",
